fix: chat message not aligned properly with date

--- a/client/src/components/chat/chat.css
+++ b/client/src/components/chat/chat.css
@@ -47,11 +47,16 @@
 
 .receiver .userChat .chatContent{
     flex-direction: row-reverse; 
-    justify-content: flex-end;
+    justify-content: flex-start;
     border-radius: 0px 10px 10px 10px;
 
 }
 
+.receiver .userChat {
+   display: flex;
+   flex-direction: column;
+   align-items:flex-start
+}
 
 .receiver .chatContent p{
     /* background:white; */
